--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         
     </head>
     <body>
-<h1> yes</h1>
+        <center><h1>Harolds csc106 portfolio</h1></center>
 
     </body>
 </html>
