--- a/javascript.html
+++ b/javascript.html
@@ -16,7 +16,7 @@
          <thead>
         
             <td>
-                <a href= "https://harolda3102.github.io/index.html">
+                <a href= "https://harolda3102.github.io/csc106/index.html">
                 <img id="home" src="home.png" alt="This is the home botton"></a>
             </td>
              
@@ -42,4 +42,3 @@
     I will place my progress and accomplishments in the links above.</p></center>
     </body>
 </html>
-
