--- a/csstest.html
+++ b/csstest.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+    <head>
+      <h1>Hello World</h1>
+        <meta charset="utf-8">
+        <title>HTML basics</title>
+    </head>
+    <body>
 
+
+    </body>
+</html>
