--- a/csstest.html
+++ b/csstest.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="style1.css">
       <h1>Hello World</h1>
         <meta charset="utf-8">
         <title>HTML basics</title>
