--- a/csstest.html
+++ b/csstest.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="style1.css">
       <h1>Hello World</h1>
         <meta charset="utf-8">
-        <title>HTML basics</title>
+        <title>css basics</title>
     </head>
     <body>
 
