--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
             <thead>
                 
                 <td>
-                    <img id="mom" src="mom.png" alt="image of my mom, sister, and I" width="250"></td>
+                    <img id="mom" src="mom.jpg" alt="image of my mom, sister, and I" width="250"></td>
                 
                 <td>
                     <img id="yes" src="Harold.jpg" alt="image of My car andI" width="250"></td>
