--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
              
             <td>
                 <a href="https://harolda3102.github.io/csc106/about.html">
-                <img id="about" src="about_me.ong" alt="information about me">
+                <img id="about" src="about_me.png" alt="information about me">
              </td>
         
      </Table></center>
