--- a/javascript.html
+++ b/javascript.html
@@ -37,5 +37,6 @@
                 
                 
 <center><p>Hi, This is my javascript page this where ill be posting my javascript assignments, projects, and fun stuff I do while in bored.  </p></center>
+        <h2><a href="https://www.khanacademy.org/computer-programming/final_project_csc106/5356963683581952">Final_project_CSC106</a></h2><script src="https://www.khanacademy.org/computer-programming/final_project_csc106/5356963683581952/embed.js?editor=no&buttons=yes&author=yes&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
     </body>
 </html>
