--- a/final.html
+++ b/final.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style1.css">           
-        <title>Harold's javascript art</title>
+        <title>Final Project</title>
     </head>
         
     <body>
