--- a/about.html
+++ b/about.html
@@ -25,6 +25,10 @@
                 <a href="https://harolda3102.github.io/csc106/about.html">
                 <img id="about" src="about_me.png" alt="information about me">
              </td>
+            <td>
+                <a href= "https://harolda3102.github.io/csc106/final.html">
+                <img id="final" src="final.png" alt="final Project">
+             </td>   
         
      </Table></center>
    
