--- a/javascript.html
+++ b/javascript.html
@@ -29,7 +29,11 @@
             <td>
                 <a href= "https://harolda3102.github.io/csc106/about.html">
                 <img id="about" src="about_me.png" alt="information about me">
-    </td>       
+    </td>  
+             <td>
+                <a href= "https://harolda3102.github.io/csc106/final.html">
+                <img id="final" src="final.png" alt="final Project">
+    </td>                   
      </Table></center>
    
                 <center><h1> Welcome to Harold's Javascript profile</h1></center> 
